# cnc_violin_modal_analysis

./: README.md  impactTestpulseTime.py
c++/: CMakeLists.txt  encoder.cpp  motor.cpp  pio_rotary_encoder.cpp  pio_rotary_encoder.pio.h  pwm.cpp
cplusplus/: controller.cpp  encoder.h  motor.h  pwm.h
data-collection/: Readme.md  dataCollection.py
data_collection/: generateGCODE.py  impactPulseCollection.py
data_collection/test/: circularBuffer.py  readme.md
micropython/: main.py
micropython/controller-testing/: impactTest.py
micropython/controllerTesting/: prevMain.py  simpleTest.py  testOperation.py
micropython/helper-classes/: ak8963.py  motor.py
micropython/libraries/: count.py
path-planning/: pathPlanner.py  vioin.stl
pathPlanning/: pathPlanner.py
